--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,20 @@ attrs==19.3.0
 backports.zoneinfo==0.2.1
 certifi==2020.4.5.1
 chardet==3.0.4
-Django==4.1.7
+Django==4.2
+django-cors-headers==3.14.0
 django-filter==22.1
-djangorestframework==3.11.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 idna==2.9
-importlib-metadata==1.6.0
+importlib-metadata==6.3.0
+Markdown==3.4.3
 more-itertools==8.2.0
 packaging==20.3
 Pillow==9.4.0
 pluggy==0.13.1
 py==1.8.1
+PyJWT==2.6.0
 pyparsing==2.4.7
 pytest==5.4.1
 pytest-django==3.9.0
@@ -22,6 +26,8 @@ requests==2.23.0
 six==1.14.0
 sorl-thumbnail==12.9.0
 sqlparse==0.3.1
-urllib3==1.25.9
+style==1.1.0
+update==0.0.1
+urllib3==1.26.15
 wcwidth==0.1.9
 zipp==3.1.0
